--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
             <h1> Aparecida Nutrição </h1>
         </div>
     </header>
+    <main>
+        <section class="container">
+            <h2> Meus Pacientes </h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th> Nome</th>
+                        <th>Peso</th>
+                        <th>Altura</th>
+                        <th>Gordura Corporal(%)</th>
+                        <th>IMC</th>
+                    </tr>
+                </thead>
+            </table>
+        </section>
+    </main>
+  
     
 </body>
 </html>
