--- a/index.html
+++ b/index.html
@@ -24,7 +24,19 @@
                         <th>IMC</th>
                     </tr>
                 </thead>
-            </table>
+            </table> <!-- acabou o cabeçalho-->
+
+            <tbody id="tabela-paciente">
+                <tr class="paciente">
+                    <td class="info-nome"> Paulo </td>
+                    <td class="info-peso">100</td>
+                    <td class="infro-altura">2.00</td>
+                    <td class="info-banha">10</td>
+                    <td class="info-imc">0</td>
+
+                </tr>
+
+            </tbody>
         </section>
     </main>
   
