--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <th>IMC</th>
                     </tr>
                 </thead>
-            </table> <!-- acabou o cabeçalho-->
+            </table> 
 
             <tbody id="tabela-paciente">
                 <tr class="paciente">
