--- a/index.html
+++ b/index.html
@@ -1,47 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aparecida Nutrição</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/index.css">
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="css/reset.css">
+   <link rel="stylesheet" href="css/index.css">
+   <title>Aperecida Nutricao</title>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1> Aparecida Nutrição </h1>
-        </div>
-    </header>
-    <main>
-        <section class="container">
-            <h2> Meus Pacientes </h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th> Nome</th>
-                        <th>Peso</th>
-                        <th>Altura</th>
-                        <th>Gordura Corporal(%)</th>
-                        <th>IMC</th>
-                    </tr>
-                </thead>
-            </table> 
+   <header>
+       <div class="container">
+           <h1> Aparecida Nutrição </h1>
+       </div>
+   </header>
 
-            <tbody id="tabela-paciente">
-                <tr class="paciente">
-                    <td class="info-nome"> Paulo </td>
-                    <td class="info-peso">100</td>
-                    <td class="infro-altura">2.00</td>
-                    <td class="info-banha">10</td>
-                    <td class="info-imc">0</td>
 
-                </tr>
+   <main>
+       <section class="container">
+           <h2>Meus Pacientes</h2>
+           <table>
+               <thead>
+                   <tr>
+                       <th>Nome</th>
+                       <th>Peso</th>
+                       <th>Altura</th>
+                       <th>Gordura Corporal (%)</th>
+                       <th>IMC</th>
+                   </tr>
+               </thead>
 
-            </tbody>
-        </section>
-    </main>
+
+               <tbody id="tabela-pacientes">
+                   <tr class="paciente">
+                       <td class="info-nome"> Paulo </td>
+                       <td class="info-peso"> 100 </td>
+                       <td class="info-altura"> 2.00 </td>
+                       <td class="info-gordura"> 10 </td>
+                       <td class="info-imc"> 0 </td>
+                   </tr>
+               </tbody>
+           </table>
+       </section>
+   </main>
   
-    
+
+
 </body>
 </html>
+
