--- a/index.html
+++ b/index.html
@@ -37,6 +37,38 @@
                        <td class="info-gordura"> 10 </td>
                        <td class="info-imc"> 0 </td>
                    </tr>
+
+                    <tr class="paciente">
+                       <td class="info-nome"> Yuri Alberto </td>
+                       <td class="info-peso"> 80 </td>
+                       <td class="info-altura"> 1.80 </td>
+                       <td class="info-gordura"> 20 </td>
+                       <td class="info-imc"> 0 </td>
+                   </tr>
+
+                    <tr class="paciente">
+                       <td class="info-nome"> Garro </td>
+                       <td class="info-peso"> 74 </td>
+                       <td class="info-altura"> 1.64 </td>
+                       <td class="info-gordura"> 24 </td>
+                       <td class="info-imc"> 0 </td>
+                   </tr>
+
+                    <tr class="paciente">
+                       <td class="info-nome"> Vinixilter </td>
+                       <td class="info-peso"> 70 </td>
+                       <td class="info-altura"> 2.00 </td>
+                       <td class="info-gordura"> 19 </td>
+                       <td class="info-imc"> 0 </td>
+                   </tr>
+
+                    <tr class="paciente">
+                       <td class="info-nome"> Marinho </td>
+                       <td class="info-peso"> 78 </td>
+                       <td class="info-altura"> 1.80 </td>
+                       <td class="info-gordura"> 20 </td>
+                       <td class="info-imc"> 0 </td>
+                   </tr>
                </tbody>
            </table>
        </section>
