--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
    <link rel="stylesheet" href="css/reset.css">
    <link rel="stylesheet" href="css/index.css">
    <title>Aperecida Nutricao</title>
-   <script>  </script>
+   <script>
+     alert("Olá Mundo..."); 
+    </script>
 </head>
 <body>
-    <!-- alert("Olá Mundo..."); -->
+   
      console.log("curintia")
    <header>
        <div class="container">
