--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
    <title>Aperecida Nutricao</title>
    <script>
      alert("Olá Mundo..."); 
+     console.log("curintia");
     </script>
 </head>
 <body>
    
-     console.log("curintia")
+     
    <header>
        <div class="container">
            <h1> Aparecida Nutrição </h1>
