--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
    <link rel="stylesheet" href="css/index.css">
    <title>Aperecida Nutricao</title>
    <script>
-     alert("Olá Mundo..."); 
-     console.log("curintia");
+    // alert("Olá Mundo..."); 
+     //console.log("curintia");
+     document.querySelector("h1");
     </script>
 </head>
 <body>
