--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <script>
     // alert("Olá Mundo..."); 
      //console.log("curintia");
-     document.querySelector("h1");
+     console.log (document.querySelector("h1"));
     </script>
   
 </body>
