--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     // alert("Olá Mundo..."); 
      //console.log("curintia");
      console.log (document.querySelector("h1"));
+     var titulo = document.querySelector("h1");
     </script>
   
 </body>
