--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
     <script>
     // alert("Olá Mundo..."); 
      //console.log("curintia");
-     console.log (document.querySelector("h1"));
+     //console.log (document.querySelector("h1"));
      var titulo = document.querySelector("h1");
+     console.log(titulo)
     </script>
   
 </body>
