--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
      //console.log("curintia");
      //console.log (document.querySelector("h1"));
      var titulo = document.querySelector("h1");
-     console.log(titulo)
+     console.log(titulo);
      console.log(titulo.texto.textContent);
     </script>
   
