--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
      //console.log (document.querySelector("h1"));
      var titulo = document.querySelector("h1");
      console.log(titulo);
-     console.log(titulo.texto.textContent);
+     console.log(titulo.textContent);
     </script>
   
 </body>
