--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
      var titulo = document.querySelector("h1");
      console.log(titulo);
      console.log(titulo.textContent);
+     titulo.textContent("Curintia nutrição")
     </script>
   
 </body>
