--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
    <link rel="stylesheet" href="css/reset.css">
    <link rel="stylesheet" href="css/index.css">
    <title>Aperecida Nutricao</title>
-  
 </head>
 <body>
    
@@ -76,12 +75,7 @@
            </table>
        </section>
    </main>
-    <script>
-     var titulo = document.querySelector("h1");
-     console.log(titulo);
-     console.log(titulo.textContent);
-     titulo.textContent=("Curintia nutrição");
-    </script>
+    <script src="js/principal.js">    </script>
   
 </body>
 </html>
